--- a/src/components/css/MisVehiculos.css
+++ b/src/components/css/MisVehiculos.css
@@ -35,12 +35,14 @@
     width:350px;
     height:200px;
     margin: 20px 10px 0px 10px;
-    background-color: var(--WhiteMain);
-    border-radius: 100px;
+    background-color: var(--SinColorMain);
+    border-radius: 10px;
 }
 
-#Boton{
-    align-items: center;
+#BotonUE{
+    position: -webkit-bottom;
+    position: bottom;
+    bottom: 10px;
     width:200px;
     height:175px;
     color: rgba(255, 255, 255, 0);
@@ -49,8 +51,8 @@
 }
 #placa{
     position: relative;
-    right: -50px;
-    bottom: -100px;
+    right: -45px;
+    bottom: -5px;
     width: 220px;
     height: 95px;
     text-align: center;
@@ -65,6 +67,18 @@
     font-size: 50px;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
+}
+#center{
+    text-align: top;
+    display: block;
+    justify-content: top;
+    align-items: top;
+    margin: auto;
+    width: auto;
+  }
+.btn {
+    background-color: #b1550000 !important;
+    color: white !important;
 }
 
 
