--- a/src/components/css/MisVehiculos.css
+++ b/src/components/css/MisVehiculos.css
@@ -49,17 +49,27 @@
     background-color: var(--SinColorMain);
     border-color: var(--SinColorMain);
 }
+#BotonUE1{
+    position: -webkit-bottom;
+    position: bottom;
+    width:100%;
+    height:70px;
+    bottom: 10px;
+    color: var(--NaranjaMain);
+    background-color: var(--NaranjaMain);
+    border-color: var(--NaranjaMain);
+}
 #placa{
     position: relative;
-    right: -45px;
     bottom: -5px;
-    width: 220px;
+    width: 100%;
     height: 95px;
     text-align: center;
     background-color: yellow;
     border-radius: 10px;
     display: bottom;
     align-items: center; 
+    
 
 }
 #Text-Placa{
@@ -67,6 +77,7 @@
     font-size: 50px;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
+    
 }
 #center{
     text-align: top;
