--- a/src/components/css/Precios.css
+++ b/src/components/css/Precios.css
@@ -61,7 +61,7 @@
 #Boton{
     width: 120px;
     margin: 10px;
-    background-color: var(--NaranjaMain);
+    background-color: var(--NaranjaMain) !important;
     border-color: var(--NaranjaMain);
 }
 #Boton:focus{
@@ -69,7 +69,7 @@
     border-color: transparent;
 }
 #Boton:hover{
-    background-color: var(--NaranjaSecond);
+    background-color: var(--NaranjaSecond) !important;
     border-color: var(--NaranjaSecond);
 }
 #Contain-FechaInput{
