--- a/src/components/css/basicLoginRegister.css
+++ b/src/components/css/basicLoginRegister.css
@@ -19,37 +19,43 @@
 
 }
 
-.special-label{
+#text-label1{
 
-    color:  whitesmoke !important;
-    opacity: 1 !important; 
-    font-family: Nunito Sans !important;
-    font-style: normal !important;
-    font-weight: normal !important;
-    align-items: center !important;
-    line-height: 200% !important;
+    color:  whitesmoke;
+    opacity: 1; 
+    font-family: Nunito Sans;
+    font-style: normal;
+    font-weight: normal;
+    align-items: center;
+    line-height: 200%;
 
 }
 
-.btn{
+#submitButton{
 
-    background-color: var(--NaranjaMain) !important;
-    color: white !important;
-    border: 0 !important;
+    background-color: var(--NaranjaMain) !important ;
+    border: 0;
     
 }
 
-.btn-link{
+#submitButton:hover{
 
-    background-color: var(--Gris-bg) !important;
-    color: white !important;
-    text-decoration: none !important;
+    background-color: var(--NaranjaSecond) !important ;
+    border-color: var(--NaranjaSecond) !important;
     
 }
 
-.btn:hover{
+#link2{
 
-    background-color: var(--NaranjaSecond) !important;
+    background-color: var(--Gris-bg);
+    color: white;
+    text-decoration: none;
+    
+}
+
+#link2:hover{
+
+    background-color: var(--NaranjaSecond) !important ;
     border-color: var(--NaranjaSecond) !important;
     
 }
